--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid" style="height:960px; background-color: aqua;">
-    <div class="row justify-content-center" style="background-color: red;">
+<div>
+    <div>
         <app-view></app-view>
     </div>
-    <div class="row justify-content-center"  style="background-color: blue;">
+    <div>
       <app-choice></app-choice>
     </div>
-    <div class="navbar fixed-bottom" style="background-color: orange;">
+    <div>
       <app-footer></app-footer>
     </div>
 </div>
