--- a/src/app/choice/choice.component.html
+++ b/src/app/choice/choice.component.html
@@ -1,5 +1,13 @@
-<div class="container-fluid">
-  <button class="btn-primary">Antwoord 1</button>
-  <button class="btn-primary">Antwoord 2</button>
-  <button class="btn-primary">Antwoord 3</button>
+<div class="container-fluid parent" style="height: 280px; background-color:blue;">
+  <div class="row child">
+    <div class="col-4">
+        <button class="btn btn-danger btn-lg">Antwoord 1</button>
+    </div>
+    <div class="col-4">
+        <button class="btn btn-danger btn-lg">Antwoord 2</button>
+    </div>
+    <div class="col-4">
+        <button class="btn btn-danger btn-lg">Antwoord 3</button>
+    </div>
+  </div>
 </div>
