--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid" style="height:64px; background-color: orange;">
   <div class="row">
-      <p class="col"> Dit is een mooie tekst</p>
-      <p class="col">Dit is een klokje</p>
+    <div class="col" style="text-align:left;">
+        <p> Dit is een mooie tekst</p>
+    </div>
+    <div class="col" style="text-align:right;">
+        <p>Dit is een klokje</p>
+    </div>  
   </div>
 </div>
