--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid" >
-  <div>
-      <h1>Hier staat een spanned verhaal over hackers enzo</h1>
-      <p>Jij moet de wereld redden fatass</p>
+<div class="container-fluid parent" style="height:620px; background-color:red;">
+  <div class="row child">
+      <h1 class="mx-auto">Hier staat een spannend verhaal over hackers enzo</h1>
+      <p class="mx-auto">Jij moet de wereld redden fatass</p>
   </div>
 </div>
 
