Added Console and Timer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<body scroll="no" style="height:100vh;">
 <div>
     <div>
         <app-view></app-view>
@@ -10,3 +11,4 @@
     </div>
 </div>
 <router-outlet></router-outlet>
+</body>
