--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,7 +1,12 @@
-<div class="container-fluid parent" style="height:620px; background-color:red;">
-  <div class="row child">
-      <h1 class="mx-auto">Hier staat een spannend verhaal over hackers enzo</h1>
-      <p class="mx-auto">Jij moet de wereld redden fatass</p>
+<div class="container-fluid parent" style="background-color:red;">
+  <div class="shell-wrap" style="height:76vh;">
+    <p class="shell-top-bar">/Users/pjlangley/Documents/websites/</p>
+    <ul class="shell-body">
+      <li>cd&nbsp;/Users/pjlangley/Documents/websites/codechewing.com/git/css-shell/demo/</li>
+      <li>cd ../../../../</li>
+      <li>pwd</li>
+      <li>/Users/pjlangley/Documents/websites/</li>
+    </ul>
   </div>
 </div>
 
