--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid" style="height:64px; background-color: orange;">
+<div class="container-fluid" style="height:4vh; background-color: orange;">
   <div class="row">
     <div class="col" style="text-align:left;">
         <p> Dit is een mooie tekst</p>
     </div>
-    <div class="col" style="text-align:right;">
-        <p>Dit is een klokje</p>
+    <div class="col" style="text-align:right;">    
+      <p>{{timeLeft}} Seconds Left....</p> 
     </div>  
   </div>
 </div>
