--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -2,11 +2,9 @@
   <div class="shell-wrap" style="height:76vh;">
     <p class="shell-top-bar">/Users/pjlangley/Documents/websites/</p>
     <ul class="shell-body">
-      <li>cd&nbsp;/Users/pjlangley/Documents/websites/codechewing.com/git/css-shell/demo/</li>
-      <li>cd ../../../../</li>
-      <li>pwd</li>
-      <li>/Users/pjlangley/Documents/websites/</li>
+      <li *ngFor="let string of stringList" class="typewriter">
+        {{ string }}
+      </li>
     </ul>
-  </div>
+    </div>
 </div>
-
