--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@ body,html {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-image: url("./images/screen.JPG");
 }
 * {
     box-sizing: border-box;
