--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid parent" style="background-color:red;">
-  <div class="shell-wrap" style="height:76vh;">
-    <p class="shell-top-bar">/Users/pjlangley/Documents/websites/</p>
+<div class="container-fluid parent" style=" height:76vh;">
+  <div class="shell-wrap">
+    <p class="shell-top-bar">/MainDrive/Programs/SaveTheWorld.exe</p>
     <ul class="shell-body">
-      <li *ngFor="let string of stringList" class="typewriter">
+      <li *ngFor="let string of stringList">
         {{ string }}
       </li>
     </ul>
