parse xml to json, create global to store json object

--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -6,6 +6,7 @@
       <li>cd ../../../../</li>
       <li>pwd</li>
       <li>/Users/pjlangley/Documents/websites/</li>
+      <li>{{globals.object.menu.intro}}</li>
     </ul>
   </div>
 </div>
