--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="height:4vh; background-color: orange;">
   <div class="row">
     <div class="col" style="text-align:left;">
-        <p> Dit is een mooie tekst</p>
+        <p> {{globals.points}}</p>
     </div>
     <div class="col" style="text-align:right;">    
       <p>{{timeLeft}} Seconds Left....</p> 
