--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -7,6 +7,7 @@
       <li>pwd</li>
       <li>/Users/pjlangley/Documents/websites/</li>
       <li>{{globals.object.menu.intro}}</li>
+      <li *ngIf="globals.object.menu.story">{{globals.object.menu.options.option[globals.ID].question}}</li>
     </ul>
   </div>
 </div>
