Still searching for typewriter

--- a/src/app/choice/choice.component.html
+++ b/src/app/choice/choice.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid parent" style="height: 20vh; background-color:blue;">
+<div class="container-fluid parent" style="height: 20vh;">
   <div class="row child">
     <div class="col-6">
         <button class="btn btn-danger btn-lg">Antwoord 1</button>
