--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,10 +1,8 @@
 <div class="container-fluid parent" style=" height:76vh;">
   <div class="shell-wrap">
     <p class="shell-top-bar">/MainDrive/Programs/SaveTheWorld.exe</p>
-    <ul class="shell-body">
-      <li *ngFor="let string of stringList">
-        {{ string }}
-      </li>
-    </ul>
+    <div class="shell-body">
+      <p class="">Hallodikke zeug dat je bent eig hahah whahbafhbasfb</p>
     </div>
+  </div>
 </div>
