--- a/src/app/choice/choice.component.html
+++ b/src/app/choice/choice.component.html
@@ -1,23 +1,26 @@
-<div class="container-fluid parent" style="height: 20vh; background-color:blue;">
-  <div class="row child">
-      <div *ngIf="!globals.object.menu.story">
-          <div class="col-5" *ngFor="let object of globals.object.menu.options.option">
-            <button class="btn btn-danger btn-lg" (click)="chooseStory(object.file)">{{object.title}}</button>
-          </div>
-        </div>
-    <div *ngIf="globals.object.menu.story">
-      <div *ngIf="globals.object.menu.options.option[globals.ID].answers">
-          <div class="col-5" *ngFor="let object of globals.object.menu.options.option[globals.ID].answers.answer">
-              <button class="btn btn-danger btn-lg" (click)="chooseAnswer(object.ref, object.points)">{{object.text}}</button>
-            </div> 
+<div class="container-fluid parent" style="height: 20vh;">
+  
+  <div class="row justify-content-center child">
+
+    <div class="col row justify-content-center" *ngIf="!globals.object.menu.story">
+      <div class="col" *ngFor="let object of globals.object.menu.options.option">
+        <button class="btn btn-danger btn-lg" (click)="chooseStory(object.file)">{{object.title}}</button>
       </div>
-           
-    </div>    
-    <div *ngIf="globals.object.menu.story">
-        <div *ngIf="globals.object.menu.options.option[globals.ID].file" class="col-5">
-            <button class="btn btn-danger btn-lg" (click)="chooseStory(globals.object.menu.options.option[globals.ID].file)">Main Menu</button>
+    </div>
+
+    <div class="col" *ngIf="globals.object.menu.story">
+      <div class="row justify-content-center" *ngIf="globals.object.menu.options.option[globals.ID].answers">
+        <div class="col" *ngFor="let object of globals.object.menu.options.option[globals.ID].answers.answer">
+          <button class="btn btn-danger btn-lg"
+            (click)="chooseAnswer(object.ref, object.points)">{{object.text}}</button>
         </div>
+      </div>
+    </div>
+
+    <div class="col" *ngIf="globals.object.menu.story && globals.object.menu.options.option[globals.ID].file">
+        <button class="btn btn-danger btn-lg" (click)="chooseStory(globals.object.menu.options.option[globals.ID].file)">Main Menu</button>
     </div>
     
   </div>
+
 </div>
