--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -8,7 +8,7 @@
     transform: translate(-50%, -50%);
   }
 .shell-wrap {
-    /*width: 500px;*/
+    width: 1000px;
     box-shadow: 0 0 30px rgba(0,0,0,0.4);
   
     -webkit-border-radius: 3px;
@@ -51,7 +51,6 @@
     color: #45D40C;
     font: 0.8em 'Andale Mono', Consolas, 'Courier New';
     line-height: 1.6em;
-    height:76vh;
   
     -webkit-border-bottom-right-radius: 3px;
     -webkit-border-bottom-left-radius: 3px;
