Revert "Merge branch 'develop' into XML"
This reverts commit e1f10200fe1fff3f26faabdd07490c557cee9489.

--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,11 +1,14 @@
-<div class="container-fluid parent" style="height:76vh;">
-  <div class="row justify-content-center">
-      <div class="shell-wrap" style="width: 1100px; margin-top: 80px;">
-        <p class="shell-top-bar">/Users/saviour/Documents/SaveTheWorld/</p>
-        <ul class="shell-body" style="width: 1100px; height: 300px;">
-          <li>{{globals.object.menu.intro}}</li>
-          <li *ngIf="globals.object.menu.story">{{globals.object.menu.options.option[globals.ID].question}}</li>
-        </ul>
-      </div>
+<div class="container-fluid parent" style="background-color:red;">
+  <div class="shell-wrap" style="height:76vh;">
+    <p class="shell-top-bar">/Users/pjlangley/Documents/websites/</p>
+    <ul class="shell-body">
+      <li>cd&nbsp;/Users/pjlangley/Documents/websites/codechewing.com/git/css-shell/demo/</li>
+      <li>cd ../../../../</li>
+      <li>pwd</li>
+      <li>/Users/pjlangley/Documents/websites/</li>
+      <li>{{globals.object.menu.intro}}</li>
+      <li *ngIf="globals.object.menu.story">{{globals.object.menu.options.option[globals.ID].question}}</li>
+    </ul>
   </div>
 </div>
+
