--- a/src/app/choice/choice.component.html
+++ b/src/app/choice/choice.component.html
@@ -1,5 +1,15 @@
+<div class="container-fluid parent" style="height: 20vh; background-color:blue;">
+  <div class="row child">
+      <div *ngIf="!globals.object.menu.story">
+          <div class="col-5" *ngFor="let object of globals.object.menu.options.option">
             <button class="btn btn-danger btn-lg" (click)="chooseFile(object.file, object.id)" [disabled]="testStory(object.id)">{{object.title}}</button>
+          </div>
         </div>
+    <div *ngIf="globals.object.menu.story">
+      <div *ngIf="globals.object.menu.options.option[globals.ID].answers">
+          <div class="col-5" *ngFor="let object of globals.object.menu.options.option[globals.ID].answers.answer">
+              <button class="btn btn-danger btn-lg" (click)="chooseAnswer(object.ref, object.points)">{{object.text}}</button>
+            </div> 
       </div>
            
     </div>    
@@ -19,5 +29,4 @@
     </div>
     
   </div>
-
 </div>
