--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -8,9 +8,10 @@
     transform: translate(-50%, -50%);
   }
 .shell-wrap {
-    /*width: 500px;*/
+    width: 1000px;
     box-shadow: 0 0 30px rgba(0,0,0,0.4);
-  
+    top: 200px;
+    left: 300px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
@@ -51,7 +52,6 @@
     color: #45D40C;
     font: 0.8em 'Andale Mono', Consolas, 'Courier New';
     line-height: 1.6em;
-    height:76vh;
   
     -webkit-border-bottom-right-radius: 3px;
     -webkit-border-bottom-left-radius: 3px;
@@ -72,4 +72,27 @@
     word-wrap: break-word;
     position: relative;
     padding: 0 0 0 15px;
+  }
+
+  .typewriter{
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 20% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
   }
