--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,8 @@
-<div class="container-fluid" style="height:4vh; background-color: orange;">
+<div class="container-fluid" style="height:12vh;  margin-top:10vh;">
   <div class="row">
-    <div class="col" style="text-align:left;">
-        <p> {{globals.points}}</p>
+    <div class="col-1" style="text-align:left; background-color: orange; text-align: center;">
+      <p>Punten:</p>
+      <p> {{globals.points}}</p>
     </div>
-    <div class="col" style="text-align:right;">    
-      <p>{{timeLeft}} Seconds Left....</p> 
-    </div>  
   </div>
 </div>
